# tutoring

./: .gitignore  README.md  combined.tex  links.py  pyproject.toml
cs/: cs_worksheets.tex
grammar/: outline.md
maths/: Makefile  add_sub_word_problems_05.docx  add_sub_word_problems_1.docx  add_sub_word_problems_10.docx  add_sub_word_problems_11.docx  add_sub_word_problems_12.docx  add_sub_word_problems_13.docx  add_sub_word_problems_14.docx  add_sub_word_problems_15.docx  add_sub_word_problems_16.docx  add_sub_word_problems_17.docx  add_sub_word_problems_18.docx  add_sub_word_problems_19.docx  add_sub_word_problems_2.docx  add_sub_word_problems_20.docx  add_sub_word_problems_21.docx  add_sub_word_problems_22.docx  add_sub_word_problems_23.docx  add_sub_word_problems_24.docx  add_sub_word_problems_25.docx  add_sub_word_problems_26.docx  add_sub_word_problems_27.docx  add_sub_word_problems_28.docx  add_sub_word_problems_29.docx  add_sub_word_problems_3.docx  add_sub_word_problems_30.docx  add_sub_word_problems_31.docx  add_sub_word_problems_32.docx  add_sub_word_problems_33.docx  add_sub_word_problems_34.docx  add_sub_word_problems_35.docx  add_sub_word_problems_36.docx  add_sub_word_problems_37.docx  add_sub_word_problems_38.docx  add_sub_word_problems_39.docx  add_sub_word_problems_4.docx  add_sub_word_problems_40.docx  add_sub_word_problems_41.docx  add_sub_word_problems_42.docx  add_sub_word_problems_43.docx  (+16 more)
maths/data/: IDCJAC0002_066037_Data1.csv  seatac.csv  (+4 more)
reading/: alphabet_dance.docx  bigletters.odt
writing/: .Makefile.swp  Makefile  create_files.sh
(+5 files in other folders)
